--- a/app/build.gradle
+++ b/app/build.gradle
@@ -90,4 +90,7 @@ dependencies {
 
     // Gson
     implementation 'com.google.code.gson:gson:2.8.6'
+
+    // SwipeLayout
+    implementation 'com.chauthai.swipereveallayout:swipe-reveal-layout:1.4.1'
 }
