--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,10 +2,9 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'dagger.hilt.android.plugin'
+    id 'kotlin-kapt'
+    id 'kotlin-android-extensions'
 }
-
-apply plugin: 'kotlin-android-extensions'
-apply plugin: 'kotlin-kapt'
 
 android {
     compileSdkVersion 30
@@ -22,6 +21,14 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
         buildConfigField "String", "CLIENT_ID", "\"${project.property("twitch_client_id")}\""
+
+        // exportSchema = true にして以下を記述すると、app/schemaにjsonファイルを作成してくれる
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments += ["room.schemaLocation":"$projectDir/schemas".toString()]
+                // app/schemas/${databaseクラスのFQDN}/$schemaVersion.json が生成されるようになる
+            }
+        }
     }
 
     buildTypes {
@@ -74,6 +81,8 @@ dependencies {
     // Room
     implementation "androidx.room:room-runtime:2.3.0"
     kapt "androidx.room:room-compiler:2.3.0"
+
+    androidTestImplementation "android.arch.persistence.room:testing"
 
     // Kotlin Extensions and Coroutines support for Room
     implementation "androidx.room:room-ktx:2.3.0"
