--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,10 @@ android {
     buildFeatures {
         viewBinding true
     }
+    packagingOptions {
+        exclude 'META-INF/AL2.0'
+        exclude 'META-INF/LGPL2.1'
+    }
 }
 
 dependencies {
@@ -69,6 +73,11 @@ dependencies {
 
     // LiveData
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.3.1"
+
+    // LiveData テスト用
+    testImplementation "com.nhaarman:mockito-kotlin:1.5.0"
+    implementation "android.arch.lifecycle:extensions:1.1.1"
+    testImplementation "android.arch.core:core-testing:1.1.1"
 
     // Retrofit
     def retrofit_version = "2.9.0"
