--- a/app/build.gradle
+++ b/app/build.gradle
@@ -141,6 +141,9 @@ dependencies {
     kapt "com.google.dagger:hilt-android-compiler:2.33-beta"
     implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03"
     kapt "androidx.hilt:hilt-compiler:1.0.0-beta01"
+
+    // Paging
+    implementation "androidx.paging:paging-runtime-ktx:3.0.1"
 }
 
 configurations {
