--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,7 +76,7 @@ dependencies {
     androidTestImplementation "androidx.arch.core:core-testing:2.1.0"
 
     // LiveData
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.3.1"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.3.0"
 
     // LiveData テスト用
     testImplementation "com.nhaarman:mockito-kotlin:1.5.0"
@@ -134,8 +134,7 @@ dependencies {
     implementation "androidx.fragment:fragment-ktx:1.3.6"
 
     // Activity Result API
-    implementation 'androidx.activity:activity-ktx:1.3.0-beta02'
-    implementation 'androidx.fragment:fragment-ktx:1.4.0-alpha03'
+    implementation 'androidx.activity:activity-ktx:1.3.1'
 
     // CircleImageView
     implementation 'de.hdodenhof:circleimageview:3.1.0'
