read secret properties 2

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,7 +21,8 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
-        buildConfigField "String", "CLIENT_ID", "\"${project.property("twitch_client_id")}\""
+        //buildConfigField "String", "CLIENT_ID", "\"${project.property("twitch_client_id")}\""
+        buildConfigField ("String", "CLIENT_ID", getApiKey())
 
         // exportSchema = true にして以下を記述すると、app/schemaにjsonファイルを作成してくれる
         javaCompileOptions {
@@ -166,4 +167,11 @@ task ktlintFormat(type: JavaExec, group: "formatting") {
     classpath = configurations.ktlint
     main = "com.pinterest.ktlint.Main"
     args "-F", "src/**/*.kt"
+}
+
+String getApiKey() {
+    def propFile = rootProject.file("./gradle.properties")
+    def properties = new Properties()
+    properties.load(new FileInputStream(propFile))
+    return properties['TWITCH_CLIENT_ID']
 }
