--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ plugins {
 }
 
 def getApiKey() {
-    def propFile = rootProject.file("./gradle.properties")
+    def propFile = rootProject.file("./local.properties")
     def properties = new Properties()
     properties.load(new FileInputStream(propFile))
     return properties['TWITCH_CLIENT_ID']
