--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,9 +7,9 @@ plugins {
 }
 
 def getApiKey() {
-    def propFile = rootProject.file("./local.properties")
+    def propFile = project.rootProject.file('local.properties')
     def properties = new Properties()
-    properties.load(new FileInputStream(propFile))
+    properties.load(propFile.newDataInputStream())
     return properties['TWITCH_CLIENT_ID']
 }
 
