--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -13,10 +13,17 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - name: Touch local properties
+      run: touch local.properties
+
+    - name: Add Api Key
+      run: echo "TWITCH_CLIENT_ID=\"\"" >> local.properties
+
     - name: Access TWITCH_CLIENT_ID
       env:
         TWITCH_CLIENT_ID: ${{ secrets.TWITCH_CLIENT_ID }}
       run: echo TWITCH_CLIENT_ID=\"$TWITCH_CLIENT_ID\" > ./gradle.properties
+
     - name: set up JDK 11
       uses: actions/setup-java@v2
       with:
