--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -22,7 +22,7 @@ jobs:
     - name: Access TWITCH_CLIENT_ID
       env:
         TWITCH_CLIENT_ID: ${{ secrets.TWITCH_CLIENT_ID }}
-      run: echo TWITCH_CLIENT_ID=\"$TWITCH_CLIENT_ID\" > ./gradle.properties
+      run: echo TWITCH_CLIENT_ID=\"$TWITCH_CLIENT_ID\" > ./local.properties
 
     - name: set up JDK 11
       uses: actions/setup-java@v2
