--- a/app/build.gradle
+++ b/app/build.gradle
@@ -102,17 +102,17 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
 
     // Room
-    implementation "androidx.room:room-runtime:2.3.0"
-    kapt "androidx.room:room-compiler:2.3.0"
+    implementation "androidx.room:room-runtime:2.4.0"
+    kapt "androidx.room:room-compiler:2.4.0"
 
     androidTestImplementation "android.arch.persistence.room:testing"
 
     // Kotlin Extensions and Coroutines support for Room
-    implementation "androidx.room:room-ktx:2.3.0"
+    implementation "androidx.room:room-ktx:2.4.0"
 
     // Coroutines
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.1'
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.0'
 
     // Navigation
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
@@ -146,8 +146,11 @@ dependencies {
     implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03"
     kapt "androidx.hilt:hilt-compiler:1.0.0-beta01"
 
+    // Chrome Custom Tabs
+    implementation "androidx.browser:browser:1.4.0"
+
     // Paging
-    implementation "androidx.paging:paging-runtime-ktx:3.0.1"
+    implementation "androidx.paging:paging-runtime-ktx:3.1.0"
 
     // ktlint
     ktlint("com.pinterest:ktlint:0.42.1")
