--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,9 +63,9 @@ dependencies {
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.3.1'
+    implementation 'androidx.appcompat:appcompat:1.4.0'
     implementation 'com.google.android.material:material:1.4.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
@@ -105,8 +105,6 @@ dependencies {
     implementation "androidx.room:room-runtime:2.4.0"
     kapt "androidx.room:room-compiler:2.4.0"
 
-    androidTestImplementation "android.arch.persistence.room:testing"
-
     // Kotlin Extensions and Coroutines support for Room
     implementation "androidx.room:room-ktx:2.4.0"
 
@@ -145,6 +143,12 @@ dependencies {
 
     // Paging
     implementation "androidx.paging:paging-runtime-ktx:3.1.0"
+
+    // Unit Test
+    testImplementation "androidx.test.ext:junit-ktx:1.1.3"
+    testImplementation "androidx.test:core-ktx:1.4.0"
+    testImplementation "org.robolectric:robolectric:4.7.3"
+    testImplementation "androidx.arch.core:core-testing:2.1.0"
 
     // ktlint
     ktlint("com.pinterest:ktlint:0.42.1")
