--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,7 +25,7 @@ android {
         versionName "1.0"
         multiDexEnabled true
 
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "com.example.android.dagger.CustomTestRunner"
 
         buildConfigField ("String", "CLIENT_ID", getApiKey())
     }
@@ -53,6 +53,10 @@ android {
         exclude 'META-INF/AL2.0'
         exclude 'META-INF/LGPL2.1'
     }
+    testOptions {
+        // Unit Test でRobolectricを使うために必要
+        unitTests.includeAndroidResources = true
+    }
 }
 
 configurations {
@@ -67,14 +71,10 @@ dependencies {
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'com.google.ar:core:1.25.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-
-    // Truth
-    androidTestImplementation "com.google.truth:truth:1.1.3"
-    androidTestImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.5.1"
-    androidTestImplementation "androidx.arch.core:core-testing:2.1.0"
 
     // LiveData
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.4.0"
@@ -133,10 +133,10 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 
     // Dagger-Hilt
-    implementation "com.google.dagger:hilt-android:2.33-beta"
-    kapt "com.google.dagger:hilt-android-compiler:2.33-beta"
+    implementation "com.google.dagger:hilt-android:2.38.1"
+    kapt "com.google.dagger:hilt-android-compiler:2.38.1"
     implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03"
-    kapt "androidx.hilt:hilt-compiler:1.0.0-beta01"
+    kapt "androidx.hilt:hilt-compiler:1.0.0"
 
     // Chrome Custom Tabs
     implementation "androidx.browser:browser:1.4.0"
@@ -148,6 +148,26 @@ dependencies {
     testImplementation "androidx.test.ext:junit-ktx:1.1.3"
     testImplementation "androidx.test:core-ktx:1.4.0"
     testImplementation "org.robolectric:robolectric:4.7.3"
+    testImplementation "androidx.arch.core:core-testing:2.1.0"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.5.2"
+    testImplementation 'com.google.dagger:hilt-android-testing:2.28-alpha'
+
+    androidTestImplementation "com.google.dagger:hilt-android-testing:1.0.0"
+    kaptAndroidTest "com.google.dagger:hilt-android-compiler:2.38.1"
+
+    // instrumented unit tests
+    androidTestImplementation "junit:junit:4.13.2"
+    debugImplementation "androidx.fragment:fragment-testing:1.4.0"
+
+    testImplementation 'org.robolectric:robolectric:4.7.3'
+
+    // For instrumented tests.
+    androidTestImplementation 'com.google.dagger:hilt-android-testing:2.28-alpha'
+    kaptAndroidTest 'com.google.dagger:hilt-android-compiler:2.38.1'
+
+    // Truth
+    testImplementation "com.google.truth:truth:1.1.3"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.5.2"
     testImplementation "androidx.arch.core:core-testing:2.1.0"
 
     // ktlint
