--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,7 +71,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'com.google.ar:core:1.25.0'
+    implementation 'com.google.ar:core:1.29.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
@@ -80,7 +80,6 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.4.0"
 
     // LiveData テスト用
-    testImplementation "com.nhaarman:mockito-kotlin:1.6.0"
     implementation "android.arch.lifecycle:extensions:1.1.1"
     testImplementation "android.arch.core:core-testing:1.1.1"
 
@@ -88,6 +87,7 @@ dependencies {
     def retrofit_version = "2.9.0"
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
     implementation "com.squareup.retrofit2:converter-moshi:$retrofit_version"
+    testImplementation "com.squareup.retrofit2:retrofit-mock:$retrofit_version"
     implementation "com.squareup.okhttp3:logging-interceptor:4.9.1"
 
     // Moshi
@@ -127,7 +127,7 @@ dependencies {
     implementation "androidx.fragment:fragment-ktx:1.4.0"
 
     // Activity Result API
-    implementation 'androidx.activity:activity-ktx:1.3.1'
+    implementation 'androidx.activity:activity-ktx:1.4.0'
 
     // CircleImageView
     implementation 'de.hdodenhof:circleimageview:3.1.0'
