--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,8 +78,6 @@ dependencies {
 
     // LiveData
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.4.0"
-
-    // LiveData テスト用
     implementation "android.arch.lifecycle:extensions:1.1.1"
     testImplementation "android.arch.core:core-testing:1.1.1"
 
@@ -91,37 +89,33 @@ dependencies {
     implementation "com.squareup.okhttp3:logging-interceptor:4.9.1"
 
     // Moshi
-    implementation 'com.squareup.moshi:moshi:1.11.0'
-    implementation 'com.squareup.moshi:moshi-kotlin:1.11.0'
+    def moshi_version = "1.11.0"
+    implementation "com.squareup.moshi:moshi:$moshi_version"
+    implementation "com.squareup.moshi:moshi-kotlin:$moshi_version"
 
     // Glide
     implementation 'com.github.bumptech.glide:glide:4.12.0'
 
-    // RecyclerView CardView
-    implementation 'androidx.cardview:cardview:1.0.0'
+    // RecyclerView
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
 
     // Room
-    implementation "androidx.room:room-runtime:2.4.0"
-    kapt "androidx.room:room-compiler:2.4.0"
-
-    // Kotlin Extensions and Coroutines support for Room
-    implementation "androidx.room:room-ktx:2.4.0"
+    def room_version = "2.4.0"
+    implementation "androidx.room:room-runtime:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
 
     // Coroutines
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.0'
 
     // Navigation
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
-    implementation "android.arch.navigation:navigation-fragment:1.0.0"
-    implementation "android.arch.navigation:navigation-ui:1.0.0"
-
-    implementation "androidx.fragment:fragment-ktx:1.4.0"
-
-    // Gson
-    implementation 'com.google.code.gson:gson:2.8.8'
+    def navigation_x_version = "2.3.5"
+    implementation "androidx.navigation:navigation-fragment-ktx:$navigation_x_version"
+    implementation "androidx.navigation:navigation-ui-ktx:$navigation_x_version"
+    def navigtion_version = "1.0.0"
+    implementation "android.arch.navigation:navigation-fragment:$navigtion_version"
+    implementation "android.arch.navigation:navigation-ui:$navigtion_version"
 
     // fragment-ktx
     implementation "androidx.fragment:fragment-ktx:1.4.0"
@@ -138,6 +132,9 @@ dependencies {
     implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03"
     kapt "androidx.hilt:hilt-compiler:1.0.0"
 
+    androidTestImplementation "com.google.dagger:hilt-android-testing:1.0.0"
+    kaptAndroidTest "com.google.dagger:hilt-android-compiler:2.38.1"
+
     // Chrome Custom Tabs
     implementation "androidx.browser:browser:1.4.0"
 
@@ -151,9 +148,6 @@ dependencies {
     testImplementation "androidx.arch.core:core-testing:2.1.0"
     testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.5.2"
     testImplementation 'com.google.dagger:hilt-android-testing:2.28-alpha'
-
-    androidTestImplementation "com.google.dagger:hilt-android-testing:1.0.0"
-    kaptAndroidTest "com.google.dagger:hilt-android-compiler:2.38.1"
 
     // instrumented unit tests
     androidTestImplementation "junit:junit:4.13.2"
