--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -31,3 +31,6 @@ jobs:
 
     - name: run ktlint
       run: ./gradlew ktlint
+
+    - name: run Unit Test
+      run: ./gradlew :app:testDebugUnitTest
