--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,19 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = "1.5.30"
+    ext{
+        kotlin_version = "1.5.30"
+        gradleVersion = "4.1.3"
+        hiltAndroidGradlePlugin = "2.38.1"
+    }
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.1.3"
+        classpath "com.android.tools.build:gradle:$gradleVersion"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
-        classpath "com.google.dagger:hilt-android-gradle-plugin:2.38.1"
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$hiltAndroidGradlePlugin"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
