--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -10,24 +10,33 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Access TWITCH_CLIENT_ID
-      env:
-        TWITCH_CLIENT_ID: ${{ secrets.TWITCH_CLIENT_ID }}
-      run: echo TWITCH_CLIENT_ID=\"$TWITCH_CLIENT_ID\" > ./local.properties
+      - uses: actions/checkout@v2
+      - name: Access TWITCH_CLIENT_ID
+        env:
+          TWITCH_CLIENT_ID: ${{ secrets.TWITCH_CLIENT_ID }}
+        run: echo TWITCH_CLIENT_ID=\"$TWITCH_CLIENT_ID\" > ./local.properties
 
-    - name: set up JDK 11
-      uses: actions/setup-java@v2
-      with:
-        java-version: '11'
-        distribution: 'adopt'
-        cache: gradle
+      - name: set up JDK 11
+        uses: actions/setup-java@v2
+        with:
+          java-version: '11'
+          distribution: 'adopt'
+          cache: gradle
 
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
 
-    - name: Build with Gradle
-      run: ./gradlew build
+      - name: Build with Gradle
+        run: ./gradlew build
 
-    - name: run ktlint
-      run: ./gradlew ktlint
+      - name: run ktlint
+        run: ./gradlew ktlint
+
+      - name: run danger
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          gem install bundler:2.3.5
+          bundle update
+          bundle install
+          bundle exec danger
