--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -11,6 +11,10 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+      - uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: 2.6.5
+
       - name: Access TWITCH_CLIENT_ID
         env:
           TWITCH_CLIENT_ID: ${{ secrets.TWITCH_CLIENT_ID }}
