--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -30,7 +30,6 @@ ext {
     apiDependencies = [
             retrofit          : "com.squareup.retrofit2:retrofit:$retrofitVersion",
             moshiConverter    : "com.squareup.retrofit2:converter-moshi:$retrofitVersion",
-            retrofitMock      : "com.squareup.retrofit2:retrofit-mock:$retrofitVersion",
             loggingInterceptor: "com.squareup.okhttp3:logging-interceptor:$okhttp",
             moshi             : "com.squareup.moshi:moshi:$moshiVersion",
             moshiKotlin       : "com.squareup.moshi:moshi-kotlin:$moshiVersion"
@@ -90,6 +89,7 @@ ext {
     coreTesting = "2.1.0"
     coroutinesTest = "1.5.2"
     truth = "1.1.3"
+    mockkVersion = "1.12.2"
 
     testDependencies = [
             junitKtx      : "androidx.test.ext:junit-ktx:$junitKtx",
@@ -97,6 +97,8 @@ ext {
             robolectric   : "org.robolectric:robolectric:$robolectric",
             coreTesting   : "androidx.arch.core:core-testing:$coreTesting",
             coroutinesTest: "org.jetbrains.kotlinx:kotlinx-coroutines-test:$coroutinesTest",
-            truth         : "com.google.truth:truth:$truth"
+            truth         : "com.google.truth:truth:$truth",
+            mockk         : "io.mockk:mockk:$mockkVersion",
+            mockkAgentJvm : "io.mockk:mockk-agent-jvm:$mockkVersion"
     ]
 }
