--- a/app/build.gradle
+++ b/app/build.gradle
@@ -109,8 +109,9 @@ dependencies {
     testImplementation testDependencies.coreTesting
     testImplementation testDependencies.coroutinesTest
     testImplementation testDependencies.truth
-    testImplementation testDependencies.mockk
-    testImplementation testDependencies.mockkAgentJvm
+
+    testImplementation "io.mockk:mockk:1.12.2"
+    testImplementation "io.mockk:mockk-agent-jvm:1.12.2"
 
     // ktlint
     ktlint("com.pinterest:ktlint:0.42.1")
