--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,7 +47,7 @@ android {
         abortOnError false
     }
     buildFeatures {
-        viewBinding true
+        dataBinding true
     }
     packagingOptions {
         exclude 'META-INF/AL2.0'
